Fixes spacing issue on list view.

--- a/src/styles.css
+++ b/src/styles.css
@@ -90,6 +90,7 @@ app-app-input-field {
 .buttons-container {
   display: flex;
   justify-content: space-around;
+  margin-bottom: 2em;
 }
 
 button {
